Fixed bug with extra space on mobile devices; changed project structure as it was becoming hard to navigate through files; cleaned up SortableTabs.

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 #root {
   display: flex;
   flex-direction: column;
-  height: 100svh;
+  height: 100dvh;
+  /* transition: height 0.1s linear; */
 }
 
 body {
